# pairing_opt

./: Cargo.toml
benches/: pairing_benches.rs
src/: lib.rs
src/bn256/: ec.rs  fq.rs  fq2.rs  fr.rs  g1.rs  g2.rs  mod.rs
src/mcl/: mod.rs
src/tests/: curve.rs
