[package]
name = "pairing_opt"
version = "0.26.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>",
    "Alex Gluchowski <alex@gluchowski.net>"
]
license = "MIT/Apache-2.0"

description = "Pairing-friendly elliptic curve library"
documentation = "https://docs.rs/pairing/"
homepage = "https://github.com/matter-labs/pairing"
repository = "https://github.com/matter-labs/pairing"
edition = "2018"

[dependencies]
rand = "0.4"
byteorder = "1"
cfg-if = "1.0"
ff = {package = "ff_opt", git = "https://github.com/skipjack8/ff_opt", branch = "opt", features = ["derive"]}
#mcl = { package = "mcl_rust", git = "https://github.com/skipjack8/mcl-rust", branch = "bn" }
lazy_static = "1.2.0"
rand_core = "0.5.1"

[features]
default = []
asm = ["ff/asm_derive"]
